--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <img src="coding.png" alt="" />
           </div>
           <div class="text">
-            <h3>coding</h3>
+            <h3>Coding</h3>
             <hr>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
