--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section class="experience"id="experience">
       <div class="title">
-        <h2 class="title_text"><span>E</span>perience</h2>
+        <h2 class="title_text"><span>E</span>xperience</h2>
       </div>
       <div class="content">
         <div class="box">
