--- a/index.html
+++ b/index.html
@@ -23,11 +23,7 @@
       <div class="content">
         <h2>Muhammad Ramzy<span>.</span></h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus
-          voluptate incidunt reprehenderit ab qui quasi quisquam facilis quas
-          odit, suscipit modi harum rerum natus veritatis mollitia
-          quaerat
-          dolorum molestiae nesciunt!
+          I am a Middle School Student who likes to do web Designing and Development <br> I am trying to make a career off of it.
         </p>
         <a href="#about" class="btn">Know More..</a>
       </div>
