--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammad Ramzy</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.jpg" sizes="16x16" type="image/jpg">
   </head>
   <body>
     <header>
