--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
     <div class="menutoggle fa fa-bars" onclick="togglemenu();"></div>
       <ul class="navigation">
+        <li><a href="#home" onclick="togglemenu();"><img src="favicon.jpg" alt="" style="width: 50px;border-radius: 50%;"></a></li>
         <li><a href="#home" onclick="togglemenu();">Home</a></li>
         <li><a href="#about" onclick="togglemenu();">About</a></li>
         <li><a href="#experience" onclick="togglemenu();">Experience</a></li>
