--- a/index.html
+++ b/index.html
@@ -6,13 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Muhammad Ramzy</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="favicon.jpg" sizes="16x16" type="image/jpg">
+    <link rel="icon" href="favicon.jpg" sizes="16x16" type="image/jpg" />
   </head>
   <body>
     <header>
-    <div class="menutoggle fa fa-bars" onclick="togglemenu();"></div>
+      <div class="menutoggle fa fa-bars" onclick="togglemenu();"></div>
       <ul class="navigation">
-        <li><a href="#home" onclick="togglemenu();"><img src="favicon.jpg" alt="" style="width: 50px;border-radius: 50%;"></a></li>
+        <li>
+          <a href="#home" onclick="togglemenu();"
+            ><img
+              src="favicon.jpg"
+              alt=""
+              style="width: 50px; border-radius: 50%"
+          /></a>
+        </li>
         <li><a href="#home" onclick="togglemenu();">Home</a></li>
         <li><a href="#about" onclick="togglemenu();">About</a></li>
         <li><a href="#experience" onclick="togglemenu();">Experience</a></li>
@@ -25,7 +32,9 @@
       <div class="content">
         <h2>Muhammad Ramzy<span>.</span></h2>
         <p>
-          I am a Middle School Student who likes to do web Designing and Development <br> I am trying to make a career off of it.
+          I am a Middle School Student who likes to do web Designing and
+          Development <br />
+          I am trying to make a career off of it.
         </p>
         <a href="#about" class="btn">Know More..</a>
       </div>
@@ -36,13 +45,25 @@
         <div class="col50">
           <h2 class="title_text"><span>A</span>bout</h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-            animi unde autem enim, consequatur impedit dolorem ex eius hic quae
-            quasi, dignissimos libero officia ipsum et sunt soluta reprehenderit
-            laborum.<br /><br />
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quod
-            aspernatur iure dolorem perferendis, consequatur quae est voluptas,
-            aut labore veniam doloribus repudiandae totam facilis minus.
+            Now studiying in Crescent HSS Vanimel. I specializes in python
+            coding and uses Node.JS for web developing For works see <a href="#myworks" style="text-decoration: none;color: rgb(76, 76, 239);">Click Here..</a>
+            <br /><br />
+            Quests to learn<br /><hr>
+              Completed Webdesign Challenge by Crossroads. And I completed Web Design
+            Challenge conducted by Crossroads Youtube channel. Which focuses
+            basics of HTML,CSS,JavaScript,Jquery and Bootstrap. Crossroads
+            frequently come up with exciting initiatives like 100K Coding
+            Challenge — aims to teach computer programming to 1 lakh students
+            across Kerala.<br>
+            Also has been
+            the district level champion in little kites camps. it was the turing
+            point of my life it was the time when I discovered my passion in
+            coding and web designing and development Learning online.
+            <br />
+            I have been Learning programming and since my childhood days. I have
+            been learning to program since my early ages and my quest to acquire
+            knowledge has not stopped and will never end :)
+            <br />
           </p>
         </div>
         <div class="col50">
@@ -53,7 +74,7 @@
       </div>
     </section>
 
-    <section class="experience"id="experience">
+    <section class="experience" id="experience">
       <div class="title">
         <h2 class="title_text"><span>E</span>xperience</h2>
       </div>
@@ -64,7 +85,7 @@
           </div>
           <div class="text">
             <h3>Coding</h3>
-            <hr>
+            <hr />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatem, nostrum nobis fugit sint, nesciunt iure dolor quisquam
@@ -79,7 +100,7 @@
           </div>
           <div class="text">
             <h3>Web Designing</h3>
-            <hr>
+            <hr />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatem, nostrum nobis fugit sint, nesciunt iure dolor quisquam
@@ -94,7 +115,7 @@
           </div>
           <div class="text">
             <h3>Web Development</h3>
-            <hr>
+            <hr />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatem, nostrum nobis fugit sint, nesciunt iure dolor quisquam
@@ -109,7 +130,7 @@
           </div>
           <div class="text">
             <h3>Electronics</h3>
-            <hr>
+            <hr />
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatem, nostrum nobis fugit sint, nesciunt iure dolor quisquam
@@ -122,73 +143,76 @@
     </section>
 
     <section class="myworks" id="myworks">
-        <div class="title">
-            <h2 class="title_text"><span>M</span>y Works</h2>
+      <div class="title">
+        <h2 class="title_text"><span>M</span>y Works</h2>
+      </div>
+      <div class="content">
+        <div class="box">
+          <div class="imgbx">
+            <img src="coming-soon-3080102_640.png" alt="Comeing Soon" />
+          </div>
+          <div class="text">
+            <h3>Cooming Soon</h3>
+          </div>
         </div>
-        <div class="content">
-            <div class="box">
-                <div class="imgbx">
-                    <img src="coming-soon-3080102_640.png" alt="Comeing Soon">
-                </div>
-                <div class="text">
-                    <h3>Cooming Soon</h3>
-                </div>
-            </div>
-            <div class="box">
-                <div class="imgbx">
-                    <img src="coming-soon-3080102_640.png" alt="Comeing Soon">
-                </div>
-                <div class="text">
-                    <h3>Cooming Soon</h3>
-                </div>
-            </div>
-            <div class="box">
-                <div class="imgbx">
-                    <img src="coming-soon-3080102_640.png" alt="Comeing Soon">
-                </div>
-                <div class="text">
-                    <h3>Cooming Soon</h3>
-                </div>
-            </div>
-            <div class="box">
-                <div class="imgbx">
-                    <img src="coming-soon-3080102_640.png" alt="Comeing Soon">
-                </div>
-                <div class="text">
-                    <h3>Cooming Soon</h3>
-                </div>
-            </div>
+        <div class="box">
+          <div class="imgbx">
+            <img src="coming-soon-3080102_640.png" alt="Comeing Soon" />
+          </div>
+          <div class="text">
+            <h3>Cooming Soon</h3>
+          </div>
         </div>
+        <div class="box">
+          <div class="imgbx">
+            <img src="coming-soon-3080102_640.png" alt="Comeing Soon" />
+          </div>
+          <div class="text">
+            <h3>Cooming Soon</h3>
+          </div>
+        </div>
+        <div class="box">
+          <div class="imgbx">
+            <img src="coming-soon-3080102_640.png" alt="Comeing Soon" />
+          </div>
+          <div class="text">
+            <h3>Cooming Soon</h3>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="contact" id="contact">
-        <div class="title">
-            <h2 class="title_text"><span>C</span>ontact</h2>
+      <div class="title">
+        <h2 class="title_text"><span>C</span>ontact</h2>
+      </div>
+      <div class="container">
+        <div class="contactform">
+          <h3>Send Message</h3>
+          <div class="inputbox">
+            <input type="text" placeholder="Name" />
+          </div>
+          <div class="inputbox">
+            <input type="email" placeholder="Email" />
+          </div>
+          <div class="inputbox">
+            <textarea placeholder="Message"></textarea>
+          </div>
+          <div class="inputbox">
+            <input type="submit" placeholder="Send" />
+          </div>
         </div>
-        <div class="container">
-            <div class="contactform">
-                <h3>Send Message</h3>
-                <div class="inputbox">
-                    <input type="text" placeholder="Name">
-                </div>
-                <div class="inputbox">
-                    <input type="email" placeholder="Email">
-                </div>
-                <div class="inputbox">
-                    <textarea placeholder="Message"></textarea>
-                </div>
-                <div class="inputbox">
-                    <input type="submit" placeholder="Send">
-                </div>
-            </div>
-            <div class="img">
-                <img src="contact.png" alt="Oops Something went wrong">
-            </div>
+        <div class="img">
+          <img src="contact.png" alt="Oops Something went wrong" />
         </div>
+      </div>
     </section>
 
     <div class="copyrighttext">
-        <p>©️ Copyright of <a href="#home">Muhammad Ramzy</a> . All Right are Reserved</p>
+      <p>
+        ©️ Copyright of <a href="#home">Muhammad Ramzy</a> . All Right are
+        Reserved
+      </p>
     </div>
 
     <script type="text/javascript">
@@ -197,13 +221,16 @@
         header.classList.toggle("sticky", window.scrollY > 0);
       });
 
-      function togglemenu(){
-        const menutoggle = document.querySelector('.menutoggle');
-        const navigation = document.querySelector('.navigation');
-        menutoggle.classList.toggle('active');
-        navigation.classList.toggle('active');
+      function togglemenu() {
+        const menutoggle = document.querySelector(".menutoggle");
+        const navigation = document.querySelector(".navigation");
+        menutoggle.classList.toggle("active");
+        navigation.classList.toggle("active");
       }
     </script>
-    <script src="https://kit.fontawesome.com/a79c4beae1.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/a79c4beae1.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
