--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
           <div class="contactform">
             <h3>Send Message</h3>
             <div class="inputbox">
-              <input type="text" placeholder="Name" name="name"/>
+              <input type="text" placeholder="Name" name="name" required/>
             </div>
             <div class="inputbox">
-              <input type="email" placeholder="Email" name="email"/>
+              <input type="email" placeholder="Email" name="email" required/>
             </div>
             <div class="inputbox">
-              <textarea placeholder="Message" name="message"></textarea>
+              <textarea placeholder="Message" name="message" required></textarea>
             </div>
             <div class="inputbox">
               <input type="submit" placeholder="Send" />
