--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <textarea placeholder="Message" name="message" required></textarea>
             </div>
             <div class="inputbox">
-              <input type="submit" placeholder="Send" />
+              <input type="submit" placeholder="Send">
             </div>
           </div>
           <div class="img">
