--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ==" crossorigin="anonymous"></script>
     <title>Muhammad Ramzy</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Public/CSS/style.css" />
     <link rel="icon" href="favicon.jpg" sizes="16x16" type="image/jpg" />
   </head>
   <body>
@@ -69,7 +69,7 @@
         </div>
         <div class="col50">
           <div class="imgbox">
-            <img src="guy.png" alt="Oops Something went wrong" />
+            <img src="Public/Images/guy.png" alt="Oops Something went wrong" />
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
       <div class="content">
         <div class="box">
           <div class="imgbx">
-            <img src="coding.png" alt="" />
+            <img src="Public/Images/coding.png" alt="" />
           </div>
           <div class="text">
             <h3>Coding</h3>
@@ -97,7 +97,7 @@
         </div>
         <div class="box">
           <div class="imgbx">
-            <img src="webdes.png" alt="" />
+            <img src="Public/Images/webdes.png" alt="" />
           </div>
           <div class="text">
             <h3>Web Designing</h3>
@@ -112,7 +112,7 @@
         </div>
         <div class="box">
           <div class="imgbx">
-            <img src="webdev.png" alt="" />
+            <img src="Public/Images/webdev.png" alt="" />
           </div>
           <div class="text">
             <h3>Web Development</h3>
@@ -127,7 +127,7 @@
         </div>
         <div class="box">
           <div class="imgbx">
-            <img src="electr.png" alt="" />
+            <img src="Public/Images/electr.png" alt="" />
           </div>
           <div class="text">
             <h3>Electronics</h3>
@@ -150,7 +150,7 @@
       <div class="content">
         <div class="box">
           <div class="imgbx">
-            <img src="coming-soon-3080102_640.png" alt="Comeing Soon" />
+            <img src="Public/Images/coming-soon-3080102_640.png" alt="Comeing Soon" />
           </div>
           <div class="text">
             <h3>Cooming Soon</h3>
@@ -158,7 +158,7 @@
         </div>
         <div class="box">
           <div class="imgbx">
-            <img src="coming-soon-3080102_640.png" alt="Comeing Soon" />
+            <img src="Public/Images/coming-soon-3080102_640.png" alt="Comeing Soon" />
           </div>
           <div class="text">
             <h3>Cooming Soon</h3>
@@ -166,7 +166,7 @@
         </div>
         <div class="box">
           <div class="imgbx">
-            <img src="coming-soon-3080102_640.png" alt="Comeing Soon" />
+            <img src="Public/Images/coming-soon-3080102_640.png" alt="Comeing Soon" />
           </div>
           <div class="text">
             <h3>Cooming Soon</h3>
@@ -174,7 +174,7 @@
         </div>
         <div class="box">
           <div class="imgbx">
-            <img src="coming-soon-3080102_640.png" alt="Comeing Soon" />
+            <img src="Public/Images/coming-soon-3080102_640.png" alt="Comeing Soon" />
           </div>
           <div class="text">
             <h3>Cooming Soon</h3>
@@ -205,7 +205,7 @@
             </div>
           </div>
           <div class="img">
-            <img src="contact.png" alt="Oops Something went wrong" />
+            <img src="Public/Images/contact.png" alt="Oops Something went wrong" />
           </div>
         </div>
       </form>
