--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ==" crossorigin="anonymous"></script>
     <title>Muhammad Ramzy</title>
     <link rel="stylesheet" href="Public/CSS/style.css" />
-    <link rel="icon" href="favicon.jpg" sizes="16x16" type="image/jpg" />
+    <link rel="icon" href="Public/Images/favicon.jpg" sizes="16x16" type="image/jpg" />
   </head>
   <body>
     <header>
