--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Muhammad Ramzy</title>
     <link rel="stylesheet" href="Public/CSS/style.css" />
     <link rel="icon" href="Public/Images/favicon.jpg" sizes="16x16" type="image/jpg" />
+    <meta name="description" content="I am a Middle School Student who likes to do Web Designing and Development. I am trying to make a career off of it.">
   </head>
   <body>
     <header>
