--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="Public/CSS/style.css" />
     <link rel="icon" href="Public/Images/favicon.jpg" sizes="16x16" type="image/jpg" />
     <meta name="description" content="I am a Middle School Student who likes to do Web Designing and Development. I am trying to make a career off of it.">
+    <meta name="author" content="Muhammad Ramzy">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
   </head>
   <body>
     <header>
