--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <li>
           <a href="#home" onclick="togglemenu();"
             ><img
-              src="favicon.jpg"
-              alt=""
-              style="width: 50px; border-radius: 50%"
+              src="Public/Images/favicon.jpg"
+              alt="MR."
+              style="width: 50px; border-radius: 50%;"
           /></a>
         </li>
         <li><a href="#home" onclick="togglemenu();">Home</a></li>
