--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <h2 class="title_text"><span>A</span>bout</h2>
           <p>
             Now studiying in Crescent HSS Vanimel. I specializes in python
-            coding and uses Node.JS for web developing <br>For see my works <a href="#myworks" style="text-decoration: none;color: rgb(76, 76, 239);">Click Here..</a>
+            coding and uses Node.JS for web developing <br>For see my works <a href="#myworks" style="text-decoration: none;color: rgb(71, 71, 239);">Click Here..</a>
             <br /><br />
             Quests to learn<br /><hr>
               Completed Webdesign Challenge by Crossroads. And I completed Web Design
@@ -204,7 +204,7 @@
               <textarea placeholder="Message" name="message" required></textarea>
             </div>
             <div class="inputbox">
-              <input type="submit" placeholder="Send">
+              <input type="submit" placeholder="Send" value="Send">
             </div>
           </div>
           <div class="img">
