--- a/index.html
+++ b/index.html
@@ -89,7 +89,11 @@
           </div>
           <div class="text">
             <h3>Coding</h3>
-            <hr />
+            <div class="progress">
+              <div class="progress-done-coding">
+                Skill Level 70%
+              </div>
+            </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatem, nostrum nobis fugit sint, nesciunt iure dolor quisquam
@@ -104,7 +108,11 @@
           </div>
           <div class="text">
             <h3>Web Designing</h3>
-            <hr />
+            <div class="progress">
+              <div class="progress-done-webdes">
+                Skill Level 65%
+              </div>
+            </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatem, nostrum nobis fugit sint, nesciunt iure dolor quisquam
@@ -119,7 +127,11 @@
           </div>
           <div class="text">
             <h3>Web Development</h3>
-            <hr />
+            <div class="progress">
+              <div class="progress-done-webdev">
+                Skill Level 40%
+              </div>
+            </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatem, nostrum nobis fugit sint, nesciunt iure dolor quisquam
@@ -134,7 +146,11 @@
           </div>
           <div class="text">
             <h3>Electronics</h3>
-            <hr />
+            <div class="progress">
+              <div class="progress-done-elect">
+                Skill Level 60%
+              </div>
+            </div>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Voluptatem, nostrum nobis fugit sint, nesciunt iure dolor quisquam
