--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
         </p>
         <a href="#about" class="btn">Know More..</a>
       </div>
+      <span class="skewedOne"></span>
+      <span class="skewedTwo"></span>
     </section>
 
     <section class="about" id="about">
@@ -279,5 +281,17 @@
           })
       })
   </script> -->
+  <script>
+    const skewedOne = document.querySelector('.skewedOne');
+    const skewedTwo = document.querySelector('.skewedTwo');
+
+    window.addEventListener('scroll', function(){
+      const value1 = -15 + window.scrollY/45;
+      const value2 = 15 + window.scrollY/-45;
+
+      skewedOne.style.transform = "skewY("+value1+"deg)";
+      skewedTwo.style.transform = "skewY("+value2+"deg)";
+    })
+  </script>
   </body>
 </html>
