--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Muhammad Ramzy</title>
     <link rel="stylesheet" href="Public/CSS/style.css" />
     <link rel="icon" href="Public/Images/favicon.jpg" sizes="16x16" type="image/jpg" />
-    <meta name="description" content="I am a Middle School Student who likes to do Web Designing and Development. I am trying to make a career off of it.">
+    <meta name="description" content="I am a Middle School Student who likes to do Web Designing and Development. And this is my personal website . For more info about me Check this website.">
     <meta name="author" content="Muhammad Ramzy">
     <meta name="keywords" content="HTML, CSS, JavaScript">
   </head>
@@ -205,7 +205,7 @@
     </section>
 
     <section class="contact" id="contact">
-      <form id="submit-form" method="POST" action="https://script.google.com/macros/s/AKfycbw2TcooMjO5oj1A4ASQiIqn0yey54Fc9B99-VkHWc06uIynwzwpCD1JEA/exec">
+      <form id="submit-form">
         <div class="title">
           <h2 class="title_text"><span>C</span>ontact</h2>
         </div>
@@ -256,7 +256,7 @@
       src="https://kit.fontawesome.com/a79c4beae1.js"
       crossorigin="anonymous"
     ></script>
-    <!-- <script>
+    <script>
       $("#submit-form").submit((e)=>{
           e.preventDefault()
           $.ajax({
@@ -280,7 +280,7 @@
               }
           })
       })
-  </script> -->
+  </script>
   <script>
     const skewedOne = document.querySelector('.skewedOne');
     const skewedTwo = document.querySelector('.skewedTwo');
