--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@
         <div class="col50" data-aos="zoom-in-right" data-aos-duration="1500">
           <h2 class="title_text"><span>A</span>bout</h2>
           <p>
-            Now studiying in Crescent HSS Vanimel. I specializes in python
-            coding and uses Node.JS for web developing <br>For see my works <a href="#myworks" style="text-decoration: none;color: rgb(71, 71, 239);">Click Here..</a>
+            Now studiying in Crescent HSS Vanimel. I specializes in Python
+            coding and uses Node.JS and Flask for web developing 
+            <br>For see my works <a href="#myworks" style="text-decoration: none;color: rgb(71, 71, 255);">Click Here..</a>
             <br /><br />
             Quests to learn<br /><hr>
-              Completed Webdesign Challenge by Crossroads. And I completed Web Design
-            Challenge conducted by Crossroads Youtube channel. Which focuses
+              Completed Webdesign Challenge by Crossroads. Which focuses
             basics of HTML,CSS,JavaScript,Jquery and Bootstrap. Crossroads
             frequently come up with exciting initiatives like 100K Coding
             Challenge — aims to teach computer programming to 1 lakh students
             across Kerala.<br>
             Also has been
-            the district level champion in little kites camps. it was the turing
+            the district level champion in little kites camps (IT Club). it was the turning
             point of my life it was the time when I discovered my passion in
-            coding and web designing and development Learning online.
+            coding and web designing and development and Learning online.
             <br />
             I have been Learning programming and since my childhood days. I have
             been learning to program since my early ages and my quest to acquire
@@ -88,7 +88,7 @@
       <div class="content" data-aos="fade-up" data-aos-duration="1500">
         <div class="box">
           <div class="imgbx">
-            <img src="Public/Images/coding.png" alt="" />
+            <img src="Public/Images/coding.png" alt="Coding Image" />
           </div>
           <div class="text">
             <h3>Coding</h3>
@@ -107,7 +107,7 @@
         </div>
         <div class="box">
           <div class="imgbx">
-            <img src="Public/Images/webdes.png" alt="" />
+            <img src="Public/Images/webdes.png" alt="Web designing Image" />
           </div>
           <div class="text">
             <h3>Web Designing</h3>
@@ -126,7 +126,7 @@
         </div>
         <div class="box">
           <div class="imgbx">
-            <img src="Public/Images/webdev.png" alt="" />
+            <img src="Public/Images/webdev.png" alt="web development Image" />
           </div>
           <div class="text">
             <h3>Web Development</h3>
@@ -145,7 +145,7 @@
         </div>
         <div class="box">
           <div class="imgbx">
-            <img src="Public/Images/electr.png" alt="" />
+            <img src="Public/Images/electr.png" alt="electronics Image" />
           </div>
           <div class="text">
             <h3>Electronics</h3>
@@ -227,7 +227,7 @@
             </div>
           </div>
           <div class="img" data-aos="zoom-in" data-aos-duration="1500">
-            <img src="Public/Images/contact.png" alt="Oops Something went wrong" />
+            <img src="Public/Images/contact.png" alt="Image not found" />
           </div>
         </div>
       </form>
