--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
       <div class="title">
         <h2 class="title_text"><span>E</span>xperience</h2>
       </div>
-      <div class="content" data-aos="fade-up" data-aos-duration="1500">
-        <div class="box">
+      <div class="content">
+        <div class="box" data-aos="fade-up" data-aos-duration="1500">
           <div class="imgbx">
             <img src="Public/Images/coding.png" alt="Coding Image" />
           </div>
@@ -105,7 +105,7 @@
             </p>
           </div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-up" data-aos-duration="1500">
           <div class="imgbx">
             <img src="Public/Images/webdes.png" alt="Web designing Image" />
           </div>
@@ -124,7 +124,7 @@
             </p>
           </div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-up" data-aos-duration="1500">
           <div class="imgbx">
             <img src="Public/Images/webdev.png" alt="web development Image" />
           </div>
@@ -143,7 +143,7 @@
             </p>
           </div>
         </div>
-        <div class="box">
+        <div class="box" data-aos="fade-up" data-aos-duration="1500">
           <div class="imgbx">
             <img src="Public/Images/electr.png" alt="electronics Image" />
           </div>
