--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js" integrity="sha512-WNLxfP/8cVYL9sj8Jnp6et0BkubLP31jhTG9vhL/F5uEZmg5wEzKoXp1kJslzPQWwPT1eyMiSxlKCgzHLOTOTQ==" crossorigin="anonymous"></script>
     <title>Muhammad Ramzy</title>
     <link rel="stylesheet" href="Public/CSS/style.css" />
-    <link rel="icon" href="Public/Images/favicon.jpg" sizes="16x16" type="image/jpg" />
+    <link rel="icon" href="Public/Images/favicon.png" sizes="16x16" type="image/png" />
     <meta name="description" content="I am a Middle School Student who likes to do Web Designing and Development. And this is my personal website . For more info about me Check this website.">
     <meta name="author" content="Muhammad Ramzy">
     <meta name="keywords" content="HTML, CSS, JavaScript">
@@ -20,7 +20,7 @@
         <li>
           <a href="#home" onclick="togglemenu();"
             ><img
-              src="Public/Images/favicon.jpg"
+              src="Public/Images/favicon.png"
               alt="MR."
               style="width: 50px; border-radius: 50%;"
           /></a>
