--- a/index.html
+++ b/index.html
@@ -234,12 +234,12 @@
     </section>
 
     <div class="copyrighttext">
-      <!-- <div class="socialMedia">
-        <i class="fas fa-phone-alt items"></i>
-        <i class="fab fa-whatsapp items"></i>
-        <i class="fab fa-discord items"></i>
+      <div class="socialMedia">
+        <a href="tel:+917592887426"><i class="fas fa-phone-alt items"></i></a>
+        <a href="https://api.whatsapp.com/send/?phone=%2B917592887426&text=Hello%20Ramzy" target="_blank"><i class="fab fa-whatsapp items"></i></a>
+        <a href="https://discord.gg/VaJmJTat" target="_blank"><i class="fab fa-discord items"></i></a>
       </div>
-      <hr> -->
+      <hr>
       <p>
         ©️ Copyright of <a href="#home">Muhammad Ramzy</a> . All Right are
         Reserved
