--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="description" content="I am a Middle School Student who likes to do Web Designing and Development. And this is my personal website . For more info about me Check this website.">
     <meta name="author" content="Muhammad Ramzy">
     <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta property="og:title" content="Muhammad Ramzy">
+    <meta property="og:image" content="Public/CSS/Images/favicon.png">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   </head>
   <body>
@@ -206,7 +208,7 @@
     </section>
 
     <section class="contact" id="contact">
-      <form id="submit-form">
+      <form id="submit-form" method="POST">
         <div class="title">
           <h2 class="title_text"><span>C</span>ontact</h2>
         </div>
