--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <section class="banner" id="home">
-      <div class="content">
+      <div class="content" data-aos="fade-in" data-aos-duration="2000">
         <h2>Muhammad Ramzy<span>.</span></h2>
         <p>
           I am a Middle School Student who likes to do Web Designing and
