--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <img src="Public/Images/coming-soon-3080102_640.png" alt="Comeing Soon" />
           </div>
           <div class="text">
-            <h3>Cooming Soon</h3>
+            <h3>Coming Soon</h3>
           </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-duration="1500">
@@ -185,7 +185,7 @@
             <img src="Public/Images/coming-soon-3080102_640.png" alt="Comeing Soon" />
           </div>
           <div class="text">
-            <h3>Cooming Soon</h3>
+            <h3>Coming Soon</h3>
           </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-duration="1700">
@@ -193,7 +193,7 @@
             <img src="Public/Images/coming-soon-3080102_640.png" alt="Comeing Soon" />
           </div>
           <div class="text">
-            <h3>Cooming Soon</h3>
+            <h3>Coming Soon</h3>
           </div>
         </div>
         <div class="box" data-aos="fade-up" data-aos-duration="1900">
@@ -201,7 +201,7 @@
             <img src="Public/Images/coming-soon-3080102_640.png" alt="Comeing Soon" />
           </div>
           <div class="text">
-            <h3>Cooming Soon</h3>
+            <h3>Coming Soon</h3>
           </div>
         </div>
       </div>
