--- a/index.html
+++ b/index.html
@@ -250,10 +250,11 @@
         <a href="tel:+917592887426"><i class="fas fa-phone-alt items"></i></a>
         <a href="https://api.whatsapp.com/send/?phone=%2B917592887426&text=Hello%20Ramzy" target="_blank"><i class="fab fa-whatsapp items"></i></a>
         <a href="https://discord.gg/VaJmJTat" target="_blank"><i class="fab fa-discord items"></i></a>
+        <a href="mailto:mhdramzy777@gmail.com?subject=Hello Ramzy"><i class="fas fa-envelope items"></i></a>
       </div>
       <hr>
       <p>
-        ©️ Copyright of <a href="#home">Muhammad Ramzy</a> . All Right are
+        ©️ Copyright of <a href="https://ramzy.in/">Muhammad Ramzy</a> . All Right are
         Reserved
       </p>
     </div>
