--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
       <div class="socialMedia">
         <a href="tel:+917592887426"><i class="fas fa-phone-alt items"></i></a>
         <a href="https://api.whatsapp.com/send/?phone=%2B917592887426&text=Hello%20Ramzy" target="_blank"><i class="fab fa-whatsapp items"></i></a>
-        <a href="https://discord.gg/VaJmJTat" target="_blank"><i class="fab fa-discord items"></i></a>
+        <a href="https://discordapp.com/users/MuhammadRamzy#5190/" target="_blank"><i class="fab fa-discord items"></i></a>
         <a href="mailto:mhdramzy777@gmail.com?subject=Hello Ramzy"><i class="fas fa-envelope items"></i></a>
       </div>
       <hr>
